--- a/package.json
+++ b/package.json
@@ -1,6 +1,32 @@
 {
+  "name": "miniature-waddle",
+  "version": "1.0.0",
+  "description": "this is a description",
+  "main": "index.js",
   "dependencies": {
-    "init": "^0.1.2",
-    "nodemon": "^3.0.1"
-  }
+      "@prisma/client": "^4.13.0",
+      "body-parser": "^1.20.2",
+      "dotenv": "^16.3.1",
+      "express": "^4.18.2",
+      "jsonwebtoken": "^9.0.2",
+      "mysql": "^2.18.1",
+      "nodemon": "^3.0.1",
+      "prisma": "^5.5.2",
+      "tslib": "^2.6.2",
+      "upper-case": "^2.0.2"
+  },
+  "scripts": {
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "start": "nodemon index.js"
+  },
+  "repository": {
+      "type": "git",
+      "url": "git+https://github.com/IbrahimGerbiqi/powerup-fullstack.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+      "url": "https://github.com/IbrahimGerbiqi/powerup-fullstack/issues"
+  },
+  "homepage": "https://github.com/IbrahimGerbiqi/powerup-fullstack#readme"
 }
